css/mviewerstudio.css
/* ... */
		
		/* === range commons === */
		input[type="range"] {
			position: relative;
			background: #fff0;
			overflow: hidden;
		}
		
		/* === WebKit specific styles === */
		input[type="range"],
		input[type="range"]::-webkit-slider-runnable-track,
		input[type="range"]::-webkit-slider-thumb {
			-webkit-appearance: none;
			transition: all ease 100ms;
			height: var(--thumb-height);
		}
		
		input[type="range"]::-webkit-slider-runnable-track,
		input[type="range"]::-webkit-slider-thumb {
			position: relative;
		}
		
		input[type="range"]::-webkit-slider-thumb {
			--thumb-radius: calc((var(--thumb-height) * 0.5) - 1px);
			--clip-top: calc((var(--thumb-height) - var(--track-height)) * 0.5 - 0.5px);
			--clip-bottom: calc(var(--thumb-height) - var(--clip-top));
			--clip-further: calc(100% + 1px);
			--box-fill: calc(-100vmax - var(--thumb-width, var(--thumb-height))) 0 0
				100vmax currentColor;
			width: var(--thumb-width, var(--thumb-height));
			background: linear-gradient(currentColor 0 0) scroll no-repeat left center /
				50% calc(var(--track-height) + 1px);
			background-color: currentColor;
			box-shadow: var(--box-fill);
			border-radius: var(--thumb-width, var(--thumb-height));
		
			filter: brightness(100%);
			clip-path: polygon(
				100% -1px,
				var(--clip-edges) -1px,
				0 var(--clip-top),
				-100vmax var(--clip-top),
				-100vmax var(--clip-bottom),
				0 var(--clip-bottom),
				var(--clip-edges) 100%,
				var(--clip-further) var(--clip-further)
			);
		}
		
		input[type="range"]:hover::-webkit-slider-thumb {
			cursor: grab;
			opacity:0.9;
		}
		
		input[type="range"]::-webkit-slider-runnable-track {
			background: linear-gradient(var(--track-color) 0 0) scroll no-repeat center /
				100% calc(var(--track-height) + 1px);
		}
		
		/* === Firefox specific styles === */
		input[type="range"],
		input[type="range"]::-moz-range-track,
		input[type="range"]::-moz-range-thumb {
			appearance: none;
			transition: all ease 100ms;
			height: var(--thumb-height);
		}
		
		input[type="range"]::-moz-range-track,
		input[type="range"]::-moz-range-thumb,
		input[type="range"]::-moz-range-progress {
			background: #fff0;
		}
		
		input[type="range"]::-moz-range-thumb {
			background: currentColor;
			border: 0;
			width: var(--thumb-width, var(--thumb-height));
			border-radius: var(--thumb-width, var(--thumb-height));
			cursor: grab;
		}
		
		input[type="range"]:active::-moz-range-thumb {
			cursor: grabbing;
		}
		
		input[type="range"]::-moz-range-track {
			width: 100%;
			background: var(--track-color);
		}
		
		input[type="range"]::-moz-range-progress {
			appearance: none;
			background: currentColor;
			transition-delay: 30ms;
		}
		
		input[type="range"]::-moz-range-track,
		input[type="range"]::-moz-range-progress {
			height: calc(var(--track-height) + 1px);
			border-radius: var(--track-height);
		}
		
		input[type="range"]::-moz-range-thumb,
		input[type="range"]::-moz-range-progress {
			filter: brightness(100%);
		}
		
		
		
		#layer_sections .title-accordion {
			font-size: 1rem;
		}
		
		.layer-style {
			margin-bottom: 1em;
		}
		
		.layer-style-block {
			border: 1px solid #D1D1D1;
			border-radius: 0.6rem;
			padding: 15px;
			height: 100%;
			display: flex;
			flex-direction: column;
			justify-content: space-between;
		}
		
		div#map_filter {
			height: 300px !important;
		}
		
		#frm-lis-styles input[type="text"]:focus-visible {
			outline: none;
			background-color: #d1d1d12b;
		}
		
		.layer-style-block img {
			width: fit-content;
			max-width: 100%;
		}
		
		.layer-style-block label:hover {
			color: var(--info);
		}
		
		/* Interrogation */
		
		.list-group-item.fld {
			display: flex;
			align-items: center;
			justify-content: space-between;
			flex-direction: row;
			border-left: none;
			border-right: none;
			flex-wrap: wrap;
		}
		
		.list-group-item.fld:first-child {
			border-top: none;
		}
		
		.list-group-item.fld:last-child {
			border-bottom: none;
		}
		
		.list-group-item.fld i {
			cursor: grab;
		}
		
		.list-group-item.fld.selected {
			background-color: var(--light);
		}
		
		.list-group-item.fld.selected .fld-name {
			font-weight: 600;
		}
		
		#query-parameters {
			display: none;
		}
		
		#query-parameters.visible {
			display: block;
		}
		
		/* Recherche */
		
		#fuse_options {
			display: none;
		}
		
		/* Modal Configuration XML */
		
		pre.windows-code-XML {
			background-color: #060024;
			color: white;
			padding: 1rem 0.5rem;
			width: 100%;
		}
		
		/* Scrollbar */
		
		pre::-webkit-scrollbar {
			width: 8px;
			height: 10px
		}
		
		pre::-webkit-scrollbar-thumb {
			background: #767987;
			border-radius: 8px;
		}
		
		/* Modal - Ajouter une couche */
		
		#providers_dropdown {
			width: 20em;
			text-align: right;
		}
		
		
		/*
		-- MOBILE 
		*/
		
		@media (max-width: 800px) {
			#stepStudioContent {
			margin: 6em 0em !important;
			}
		
			#containerHome {
			padding: 10em 2em;
			}
		
			#cardsHome a {
			margin-bottom: 2em !important;
			}
		
			#homeNavbarDoc {
			position: relative !important;
			}	
		}
	
		/*Template generator*/
		#newCustomTemplateManager, #openTemplateGeneratorBtn, #customTemplateManager, #dismissTemplateGeneratorMsg {
			display: flex;
		}
	
		#generatorComponentsDDArea .subcomponents .tags-menu{
			top: auto !important;
		}
	
		/*Financeurs credit*/
	
		.credits img{
			height:50px;
		}
		.credits .col{
			text-align:center;
		}
		.credits {
			padding-bottom: 15px;
		}
		#themes-list {
			-webkit-user-select: none; /* Safari */
			-ms-user-select: none; /* IE 10 and IE 11 */
			user-select: none; /* Standard syntax */
			max-height: 500px;
			overflow-y: hidden;
		}

